20241119_kate_憑證統計表左上角logo圖片及位置更新

--- a/formA_template_checked.html
+++ b/formA_template_checked.html
@@ -13,19 +13,18 @@
 		  src: url('file:///C:/Windows/Fonts/BKANT.ttf'), local('Segoe UI');
 		  unicode-range: U+00-024F;
 		}
-		
-		.pdf-logo {
-            position: absolute;
-            top: 20px;   /* 距离页面顶部 20px */
-            left: 20px;  /* 距离页面左边 20px */
-            width: 231px;  /* 图片宽度 */
-            height: 24px;  /* 自动保持图片纵横比 */
-        }
-		
 		body {
 		  font-size: 23px; /* 網頁字體大小 */
 		  font-family: 'chinese-sans-serif', sans-serif;
 		}
+		
+		.pdf-logo {
+            position: absolute;
+            top: 0px;   /* 距离页面顶部 20px */
+            left: 0px;  /* 距离页面左边 20px */
+            width: 378px;  /* 图片宽度 */
+            height: 39px;  /* 自动保持图片纵横比 */
+        }
 		
 		/* 特定样式：设置 formId 使用 Arial 字体 */
         .form-id {
@@ -72,7 +71,7 @@
 	</style>
 </head>
 <body>
-	<img src="C:\Users\Kate\PycharmProjects\lida_project\python\assets\logo.png" alt="Logo" class="pdf-logo">
+	<img src="C:\Users\Kate\PycharmProjects\lida_project\python\assets\logo.png" alt="Logo" class="pdf-logo"><br />
 	<div class="FormA">
 		<div style="text-align: center; font-weight: bold; font-size: 30px;"><br />{{companyName}}</div>
 		<div style="text-align: center; font-weight: bold; font-size: 30px;"><br />憑證統計表-
