20241204_kate_(1)新增申報方式下拉式選單(2)新增淨利%空格(3)錯字更改_已瞭解

--- a/formA_template_unchecked.html
+++ b/formA_template_unchecked.html
@@ -166,7 +166,7 @@
 		<div style="width:100%; height: 1px; background-color:black; margin-top:5px;"></div>
 		<div style="text-align: left;">茲收到貴所提供
 			<span class="form-id">{{year1}}</span>年
-			<span class="form-id">{{month1}}</span>月憑證通知書，並以瞭解本公司目前帳務情況，
+			<span class="form-id">{{month1}}</span>月憑證通知書，並已瞭解本公司目前帳務情況，
 		</div><br /><br /><br />
 		<div style="text-align: left;">簽收：<span style="border-bottom: 1px solid black; display: inline-block; width: 200px; margin-right: 5px; vertical-align: bottom;"></span>（可撕下簽回聯或PDF電子簽章回傳事務所)</div>
 	</div>
