--- a/formA_template_checked.html
+++ b/formA_template_checked.html
@@ -150,8 +150,8 @@
 				</tr>
 			</tbody>
 		</table>
-		<div style="text-align: left;">●若年底結算申報採<span style="border: 1px solid black; padding: 2px 5px; margin-left: 5px;">書審/所得額/查帳</span> 
-			<span style="border: 1px solid black; padding: 2px 5px; margin-left: 5px;">淨利%</span>申報淨利為(B)：
+		<div style="text-align: left;">●若年底結算申報採<span style="border: 1px solid black; padding: 2px 5px; margin-left: 5px;">{{ selectedOption }}</span> 
+			<span style="border: 1px solid black; padding: 2px 5px; margin-left: 5px;">淨利{{ netincomepercent }}%</span>申報淨利為(B)：
 			<span class="form-id {% if netincome < 0 %}negative{% endif %}" style="border-bottom: 1px solid black; padding-bottom: 2px;">
 				{{ formatted_netincome }}
 			</span>。
@@ -185,7 +185,7 @@
 		<div style="width:100%; height: 1px; background-color:black; margin-top:5px;"></div>
 		<div style="text-align: left;">茲收到貴所提供
 			<span class="form-id">{{year1}}</span>年
-			<span class="form-id">{{month1}}</span>月憑證通知書，並以瞭解本公司目前帳務情況，
+			<span class="form-id">{{month1}}</span>月憑證通知書，並已瞭解本公司目前帳務情況，
 		</div><br /><br /><br />
 		<div style="text-align: left;">簽收：<span style="border-bottom: 1px solid black; display: inline-block; width: 200px; margin-right: 5px; vertical-align: bottom;"></span>（可撕下簽回聯或PDF電子簽章回傳事務所)</div>
 	</div>
